# peas-emulator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GitVersion.yml  LICENSE  PLAN.md  README.md  askr-bug.md  compatibility-matrix.json  compose.yml  pyproject.toml  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml  containers.yml  interop.yml  release.yml  version.yml
benches/: tier1_hotpath.rs  tier2_subsystem.rs  tier3_admin_api.rs  tier3_system.rs  tier4_integration_azure.rs  tier4_integration_gcs.rs  tier4_integration_oci.rs  tier4_integration_oci_multipart.rs  tier4_integration_oci_multipart_stream.rs  tier4_integration_s3.rs
benches/support/: criterion_config.rs  live_server.rs  mod.rs
docs/: peas-storage-ui-guidelines.md  support-certification.md
docs/openapi/: admin-v1.yaml
public/: openapi.yml
sdk-tests/: conftest.py  test_azure_sdk.py  test_gcs_sdk.py  test_oci_sdk.py  test_s3_sdk.py
src/: compatibility_matrix.rs  config.rs  error.rs  health.rs  lib.rs  lifecycle.rs  main.rs
src/api/: admin.rs  buckets.rs  mod.rs  models.rs  server.rs
src/auth/: admin_session.rs  authenticator.rs  mod.rs  presigned.rs  sigv4.rs
src/blob/: mod.rs
src/models/: bucket.rs  lifecycle.rs  mod.rs  multipart.rs  object.rs  policy.rs
src/providers/: azure.rs  gcs.rs  mod.rs  oci.rs  s3.rs
src/server/: handlers.rs  http.rs  mod.rs
src/services/: bucket.rs  mod.rs  object.rs
src/storage/: filesystem.rs  indexed.rs  lockfree_index.rs  memory.rs  mod.rs
src/utils/: headers.rs  mod.rs  request.rs  validation.rs  xml.rs
static/: index.html
static/assets/: index-B_HZ1kcl.css  index-Bfzdim_k.js
tests/: e2e_admin.rs  e2e_azure.rs  e2e_gcs.rs  e2e_oci.rs  e2e_s3.rs  interop_auth.rs  interop_azure.rs  interop_gcs.rs  interop_oci.rs  interop_s3.rs
tests/common/: e2e.rs  interop.rs  mod.rs
tests/interop/: requirements.txt  run_sdk_smoke.py
tools/: check_compat_matrix.ps1
ui/: .gitignore  .npmignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/.askr/: blueprint.json  builder-brief.md
ui/scripts/: seed-sample-data.js  seed-sample-data.mjs
ui/src/: api.g.ts  app.css  askr-env.d.ts  index.css  index.tsx  main.tsx  styles.css  styles.d.ts
ui/tests/: _probe.test.tsx  (+6 more)
(+132 files in other folders)
