[package]
name = "wasabi-emulator"
version = "0.1.0"
edition = "2021"
authors = ["smiggleworth"]
license = "Apache-2.0"
description = "An S3-compliant emulator designed to emulate Wasabi's object storage implementation"
repository = "https://github.com/sqrzl/wasabi-emulator"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
md5 = "0.7"
bytes = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
crossbeam-skiplist = "0.1"
quick-xml = "0.31"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]

[[bin]]
name = "wasabi-emulator"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
