[package]
name = "peas-emulator"
version = "0.1.0"
edition = "2021"
authors = ["smiggleworth"]
license = "Apache-2.0"
description = "An S3-compliant emulator with Wasabi API compatibility"
repository = "https://github.com/sqrzl/peas-emulator"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
hyper-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
md5 = "0.7"
bytes = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
crossbeam-skiplist = "0.1"
quick-xml = "0.31"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
mime_guess = "2"
urlencoding = "2"

[dev-dependencies]

[[bin]]
name = "peas-emulator"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
incremental = false

[profile.test]
incremental = false
